survey-salesforce/salesforce-app/src/objects/ContactGroup__c.object
<CustomObject>
    <description>This is a group where a contacts and surveys can be assigned. After that the surveys in the group will be distributed to the users in the group.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description for the group</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MemberCount__c</fullName>
        <description>Show the count of members in the group</description>
        <label>Member Count</label>
        <summaryForeignKey>ContactGroupMember__c.ContactGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates whether the Group is active or inactive</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyCount__c</fullName>
        <description>Count the number of surveys assigned to the group</description>
        <label>Survey Count</label>
        <summaryForeignKey>ContactGroupSurveyAssignment__c.ContactGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_name</fullName>
        <active>true</active>
        <description>Validate that the group name is unique (case sensitive).</description>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.ContactGroup__c.Fields.Name , $ObjectType.ContactGroup__c.Fields.Name , Name ) &amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.ContactGroup__c.Fields.Id , $ObjectType.ContactGroup__c.Fields.Name , Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>There is another group with the same name. Change the name and try again.</errorMessage>
    </validationRules>
</CustomObject>